--- a/executive-coaching.html
+++ b/executive-coaching.html
@@ -39,7 +39,7 @@
                             </ul>
                        
                     </li>
-                        <li><a href="myself.html">About</a></li>
+                        <li><a href="myself.html">Anamitra</a></li>
                         <li><a href="client-testimonial.html">Clients</a></li>
                         <li><a href="#">Gallery</a>
                             <ul class="sub-menu">
@@ -234,7 +234,7 @@ client leads to a co-created relationship." <br /><br />
           performance.<br><br></p>
 
         <p>He has coached over 255 senior leaders and 2800 hours. <br>He is a certified practitioner of psychometrics:
-          Hogan &amp; LVI360, Belbin, FIRO-B &amp; MBTI.<br><br></p>
+          Hogan &amp; LVI360, Belbin, MBTI &amp; FIRO-B.<br><br></p>
 
         <p>Anamita underwent the World Class Mentoring (Elite Sports & Business) Programme from Ashtridge UK.</p>
 
