--- a/myself.html
+++ b/myself.html
@@ -39,7 +39,7 @@
                             </ul>
                        
                     </li>
-                        <li><a href="myself.html">About</a></li>
+                        <li><a href="myself.html">Anamitra</a></li>
                         <li><a href="client-testimonial.html">Clients</a></li>
                         <li><a href="#">Gallery</a>
                             <ul class="sub-menu">
@@ -168,8 +168,8 @@
           & Political Science (LSE) and a Master's degree, MSc Masters in Executive Coaching
           (AMEC) from <br>Hult Ashridge UK. He studied on a British Chevening scholarship at LSE,
           UK. He got a Distinction in BSc - Economics from Presidency College. <br><br>He is a certified practitioner of
-          psychometrics: Hogan & LVI360, Belbin, FIRO-B &
-          MBTI.<br> Anamitra underwent the World Class Mentoring (Elite Sports & Business) Programme from Ashtridge UK.
+          psychometrics: Hogan & LVI360, Belbin, MBTI & FIRO-B.
+          <br> Anamitra underwent the World Class Mentoring (Elite Sports & Business) Programme from Ashtridge UK.
         </p>
 
       </div>
@@ -242,7 +242,7 @@
 
                     <li>
                       Certified practitioner of psychometrics: Hogan & LVI360 2015, <br>
-                      &nbsp; &nbsp; &nbsp;Belbin 2013, FIRO-B & MBTI 2010
+                      &nbsp; &nbsp; &nbsp;Belbin 2013, MBTI & FIRO-B 2010
                     </li>
                     <li>
                       Leadership Development Program (LDP), Center for Creative <br>
@@ -324,7 +324,7 @@ Education Collaboration: IBSA Delegation to UK, Imperial College & Oxford 2022 a
                 <h3>Alumni & Trade Associations</h3>
               </div>
               <ul>
-                <li>IIM Calcutta Alumni Association IIMC AA, Vice Chairman 2024, Secretary 2019-24</li>
+                <li>IIM Calcutta Alumni Association IIMC AA, Vice Chairman 2024-26, Secretary 2019-24</li>
                 <li>
                  Indo British Scholars’ Association IBSA Excom, Chair of Education Council 2024-26
 
