--- a/executive-education.html
+++ b/executive-education.html
@@ -38,7 +38,7 @@
                             </ul>
                        
                     </li>
-                        <li><a href="myself.html">About</a></li>
+                        <li><a href="myself.html">Anamitra</a></li>
                         <li><a href="client-testimonial.html">Clients</a></li>
                         <li><a href="#">Gallery</a>
                             <ul class="sub-menu">
@@ -150,7 +150,7 @@
                 <p>&nbsp;&nbsp; 1.5 Credit. 15 hours. Courseware & Evaluation: 2024<br /></p>
 
                 <p>2. Organizational Theory & Design (OB II, Macro OB)</p>
-                <p>&nbsp;&nbsp; 1.5 Credit. 15 hours. Courseware & Evaluation: 2018, 2023, 2024<br /></p>
+                <p>&nbsp;&nbsp; 1.5 Credit. 15 hours. Courseware & Evaluation: 2023, 2024, 2025<br /></p>
 
                 <p>3. Organizational Development & Change (OD&C)</p>
                 <p>&nbsp;&nbsp; 2 Credit. 20 hours. Courseware & Evaluation: 2022</p>
@@ -173,11 +173,12 @@
               <li>Indian Institute of Management (IIM) Kozhikode, <span class="nor-txt">V. Faculty since 2016</span>
                 <br />
                 <p><strong>Courses Taught:</strong></p>
-                <p>1. Feedback & Coaching. High Performance, OB & HR. MDP for BEL, IndianOil: 2023 <br /></p>
+                <p>1. HR Alignment to Org Objectives & HRBP: CHRO Batch 01-2024 & Batch 02-2025 <br /></p>
 
-                <p>2. Leadership, OB & HR. MDP for Indian Railways IRPS: 2019, 2020<br /></p>
+                <p>2. Feedback Coaching. Merck: 2025. Resilient Leadership. MDP for BEL, IndianOil: 2024 <br /></p>
+                <p>3. Leadership Development. MDP for Indian Railways IRPS: 2019 & 2020 <br /></p>
 
-                <p>3. OB & HR. Leadership Development. MDP for Indian Army: 2016</p>
+                <p>4. OB & HR. Leadership Development. MDP for Indian Army: 2016 </p>
               </li>
 
               <li>Eruditus Executive Education ILPSE INSEAD Singapore: <span class="nor-txt">Executive Coach
