--- a/leadership.html
+++ b/leadership.html
@@ -38,7 +38,7 @@
                             </ul>
                        
                     </li>
-                        <li><a href="myself.html">About</a></li>
+                        <li><a href="myself.html">Anamitra</a></li>
                         <li><a href="client-testimonial.html">Clients</a></li>
                         <li><a href="#">Gallery</a>
                             <ul class="sub-menu">
