--- a/leadership.html
+++ b/leadership.html
@@ -196,7 +196,7 @@
               <p style="padding:0 30px; text-align: left;">
                 <span style="font-weight:bold"> Leaders of the future will be different from that of the
                   past.</span><br><br>
-                Anamitra is a certified practitioner of psychometrics: Hogan & LVI360, Belbin, FIRO-B & MBTI.<br><br>
+                Anamitra is a certified practitioner of psychometrics: Hogan & LVI360, Belbin, MBTI & FIRO-B.<br><br>
 
                 I offer tailored leadership development (LD) that meets the needs of client organizations. A
                 typical LD engagement is covered in 4-6 LD sessions, including an impactful team leadership activity!
