--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 			<div class="item"><img src="assets/img/slider-myself.jpg" alt="" /></div>			
 			<div class="item"><img src="assets/img/banner-home2.jpg" alt="" /></div>
              <div class="item"><img src="assets/img/client-testimonial-ban-2605.jpg" alt="" /></div>
-            <div class="item"><img src="assets/img/slider-coaching-banner.jpg" alt="" /></div>
+<!--<div class="item"><img src="assets/img/slider-coaching-banner.jpg" alt="" /></div>-->
+			<div class="item"><img src="assets/img/coaching-banner.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/slider-Organization-OB.jpg" alt="" /></div>
             <div class="item"><img src="assets/img/banner2.jpg" alt="" /></div>
         </div>
